--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="fonts/stylesheet.css">
     <link rel="stylesheet" href="style/main.css">
     <script src="./scripts/main.js" defer type="module"></script>
-    <title>Kanban fuckup</title>
+    <title>Kanban superb</title>
 </head>
 
 <body>
     <div class="wrapper">
         <div class="wrap"></div>
-        <h2 class="kanban__logo"><span>K</span>anban <span>F</span>uckup</h2>
+        <h2 class="kanban__logo"><span>K</span>anban <span>S</span>uperb</h2>
         
         <div class="kanban">
             <h1 class="kanban__title">Проведи свой день продуктивно с Kanban Fuckup</h1>
